[package]
name = "python-fluxite"
version = "0.1.0"
authors = ["Abe Friesen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "python_fluxite"
crate-type = ["cdylib"]

[dependencies]

[dependencies.pyo3]
version = "0.9.0-alpha.1"
features = ["extension-module"]

[dependencies.fluxite]
path = "/home/abe/projects/fluxite"
